<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Calendar App</string>
    <string name="action_settings">Settings</string>
    <string name="event_name">Name</string>
    <string name="location">Location</string>
    <string name="description">Description</string>
    <string name="time">Time</string>
    <string name="dates">Dates</string>
    <string name="category">Category</string>
    <string name="submit">Submit</string>
    <string name="cancel">Cancel</string>
    <string name="starttime">Start Time (HH:MM am/pm)</string>
    <string name="endtime">End Time (HH:MM am/pm)</string>
    <string name="startdate">Start Date (mm/dd/yyyy)</string>
    <string name="enddate">End Date (mm/dd/yyyy)</string>
    <string name="today">Go to today</string>
    <string name="action_today">Go to today</string>
    <string name="action_day_view">Day view</string>
    <string name="action_week_view">Week view</string>

    <string-array name="view_array">
        <item>Monthly</item>
<<<<<<< Updated upstream
=======
        <item>Weekly</item>
>>>>>>> Stashed changes
        <item>Daily</item>
    </string-array>

</resources>
