<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.kevin.calendarapp" >

    <TableLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" >

        <TableRow
            android:id="@+id/nameRow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp" >

            <TextView
                android:id="@+id/name_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="30dp"
                android:text="@string/event_name" >

            </TextView>

            <EditText
                android:id="@+id/name_edit"
                android:layout_width="175dp"
                android:layout_height="wrap_content" >

                <requestFocus />
            </EditText>

        </TableRow>

        <TableRow
            android:id="@+id/descriptionRow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp" >

            <TextView
                android:id="@+id/description_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="30dp"
                android:text="@string/description" >

            </TextView>

            <EditText
                android:id="@+id/description_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >
            </EditText>

        </TableRow>

        <TableRow
            android:id="@+id/locationRow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp" >

            <TextView
                android:id="@+id/location_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="30dp"
                android:text="@string/location" >

            </TextView>

            <EditText
                android:id="@+id/location_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >
            </EditText>

        </TableRow>

        <TableRow
            android:id="@+id/startTimeRow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp" >

            <TextView
                android:id="@+id/startTime_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="30dp"
                android:text="@string/starttime" >

            </TextView>

            <EditText
                android:id="@+id/startTime_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >
            </EditText>

        </TableRow>

        <TableRow
            android:id="@+id/endTimeRow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp" >

            <TextView
                android:id="@+id/endTime_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="30dp"
                android:text="@string/endtime" >

            </TextView>

            <EditText
                android:id="@+id/endTime_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >
            </EditText>

        </TableRow>

            <TableRow
            android:id="@+id/startDateRow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp" >

            <TextView
                android:id="@+id/startDate_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="30dp"
                android:text="@string/startdate" >

            </TextView>

            <EditText
                android:id="@+id/startDate_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >
            </EditText>

        </TableRow>

        <TableRow
            android:id="@+id/endDateRow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp" >

            <TextView
                android:id="@+id/endDate_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="30dp"
                android:text="@string/enddate" >

            </TextView>

            <EditText
                android:id="@+id/endDate_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >
            </EditText>

        </TableRow>

            <TableRow
            android:id="@+id/category"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp" >

            <TextView
                android:id="@+id/category_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="30dp"
                android:text="@string/category" >

            </TextView>

            <EditText
                android:id="@+id/category_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >
            </EditText>

        </TableRow>

        <Button
            android:id="@+id/submit_button"
            android:text="@string/submit" />


        <Button
            android:id="@+id/cancel_button"
            android:text="@string/cancel" >

        </Button>

    </TableLayout>
</ScrollView>